[gd_scene load_steps=42 format=2]

[ext_resource path="res://Bar/Bar.gd" type="Script" id=1]
[ext_resource path="res://Dish/Dish.tscn" type="PackedScene" id=2]
[ext_resource path="res://ラノベPOP.otf" type="DynamicFontData" id=3]
[ext_resource path="res://SpamMeter/textures/256＊192_meter.png" type="Texture" id=4]
[ext_resource path="res://SpamMeter/textures/meter_hari.png" type="Texture" id=5]
[ext_resource path="res://Bar/textures/192＊320_BBA.png" type="Texture" id=6]
[ext_resource path="res://Bar/textures/192＊320_BBA02.png" type="Texture" id=7]
[ext_resource path="res://Bar/textures/192＊320_kokku.png" type="Texture" id=8]
[ext_resource path="res://Bar/textures/192＊320_kokku02.png" type="Texture" id=9]
[ext_resource path="res://Bar/textures/160＊720_bk_under.png" type="Texture" id=10]
[ext_resource path="res://Bar/textures/5280＊720_long.png" type="Texture" id=11]
[ext_resource path="res://Bar/textures/1280＊720_BK04.png" type="Texture" id=12]
[ext_resource path="res://Viking/textures/256＊448_ojisan_left_01.png" type="Texture" id=13]
[ext_resource path="res://Viking/textures/256＊448_ojisan_left_02.png" type="Texture" id=14]
[ext_resource path="res://Viking/sounds/Viking_spam01.ogg" type="AudioStream" id=15]
[ext_resource path="res://Viking/sounds/Viking_spam05.ogg" type="AudioStream" id=16]
[ext_resource path="res://Viking/textures/256＊448_ojisan_right_01.png" type="Texture" id=17]
[ext_resource path="res://Viking/textures/256＊448_ojisan_right_02.png" type="Texture" id=18]
[ext_resource path="res://Viking/sounds/Viking_spam02.ogg" type="AudioStream" id=19]
[ext_resource path="res://Viking/sounds/Viking_spam06.ogg" type="AudioStream" id=20]
[ext_resource path="res://Toppings/ToppingSpawner/ToppingSpawner.tscn" type="PackedScene" id=21]
[ext_resource path="res://Bar/Camera2D.gd" type="Script" id=22]
[ext_resource path="res://Bar/sounds/shalap.ogg" type="AudioStream" id=23]
[ext_resource path="res://Bar/sounds/bgm_Main.ogg" type="AudioStream" id=24]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]

animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=10]

resource_name = "30"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(":position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 128.682, 777.862 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(":frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=11]

resource_name = "40"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(":visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(":position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -128, 777.862 ), Vector2( 128.682, 777.862 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(":frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]

resource_name = "setup"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(":playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(":frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(":position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -128, 777.862 ) ]
}

[sub_resource type="SpriteFrames" id=13]

animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]

resource_name = "30"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(":position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 590.661, 777.862 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(":frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=15]

resource_name = "35"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(":visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(":position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 850, 777.862 ), Vector2( 590.661, 777.862 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(":frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]

resource_name = "setup"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(":frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(":playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(":position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 850, 777.862 ) ]
}

[sub_resource type="RectangleShape2D" id=17]

custom_solver_bias = 0.0
extents = Vector2( 363.907, 58.4895 )

[node name="Bar" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Dish" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true
position = Vector2( 370, 953.747 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]

[node name="Toppings" type="Position2D" parent="Dish" index="2"]

position = Vector2( 0, 5 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Gui" type="CanvasLayer" parent="." index="1"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="debug_total_label" type="Label" parent="Gui" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "total"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="debug_spam_label" type="Label" parent="Gui" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 113.0
margin_right = 177.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "spam"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="debug_total_count" type="Label" parent="Gui" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = 8.0
margin_right = 306.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="debug_spam_count" type="Label" parent="Gui" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 189.0
margin_top = 120.0
margin_right = 315.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="debug_dish_speed" type="Label" parent="Gui" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 244.0
margin_right = 134.0
margin_bottom = 277.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "皿の速度"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="debug_dish_value" type="SpinBox" parent="Gui" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 149.0
margin_top = 250.0
margin_right = 324.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 300.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="debug_meter_down_time" type="Label" parent="Gui" index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 287.0
margin_right = 134.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "メーター下降度(時間)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="debug_meter_down_time_value" type="SpinBox" parent="Gui" index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 334.0
margin_top = 292.0
margin_right = 509.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="debug_meter_down" type="Label" parent="Gui" index="8"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 381.0
margin_right = 230.0
margin_bottom = 414.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "メーター下降度"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="debug_meter_down_value" type="SpinBox" parent="Gui" index="9"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 389.0
margin_right = 431.0
margin_bottom = 413.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="debug_meter_up" type="Label" parent="Gui" index="10"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 332.0
margin_right = 230.0
margin_bottom = 365.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "メーター上昇度"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="debug_meter_up_value" type="SpinBox" parent="Gui" index="11"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 343.0
margin_right = 431.0
margin_bottom = 367.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="debug_spam_ratio" type="Label" parent="Gui" index="12"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 444.0
margin_right = 166.0
margin_bottom = 477.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "スパム割合"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="debug_spam_ratio_value" type="SpinBox" parent="Gui" index="13"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 450.0
margin_right = 431.0
margin_bottom = 474.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 7.0
exp_edit = false
rounded = true
editable = true
prefix = ""
suffix = ""

[node name="debug_camera_offset" type="Label" parent="Gui" index="14"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 546.0
margin_right = 368.0
margin_bottom = 620.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "カメラ移動量"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="debug_camera_offset_value" type="Label" parent="Gui" index="15"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 414.0
margin_top = 551.0
margin_right = 540.0
margin_bottom = 616.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="debug_meter" type="Label" parent="Gui" index="16"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 309.0
margin_top = 1049.0
margin_right = 435.0
margin_bottom = 1114.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="SpamMeter" type="Sprite" parent="Gui" index="17"]

editor/display_folded = true
position = Vector2( 372.944, 1187.09 )
texture = ExtResource( 4 )

[node name="Niddle" type="Sprite" parent="Gui/SpamMeter" index="0"]

position = Vector2( 0.446747, 24.4316 )
rotation = -0.000327302
texture = ExtResource( 5 )
offset = Vector2( -0.446747, -24.8285 )
_sections_unfolded = [ "Transform" ]

[node name="Button" type="Button" parent="Gui" index="18"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 407.0
margin_top = 67.0
margin_right = 658.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "restart"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Bba" type="AnimatedSprite" parent="Gui" index="19"]

position = Vector2( 95, 1120 )
frames = SubResource( 7 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Kokku" type="AnimatedSprite" parent="Gui" index="20"]

position = Vector2( 624, 1120 )
frames = SubResource( 8 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="BackGroundUnder" type="Sprite" parent="Gui" index="21"]

position = Vector2( 360, 1200 )
z_index = -1
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="BackGround" type="Sprite" parent="." index="2"]

position = Vector2( 360, -1360 )
z_index = -1
texture = ExtResource( 11 )
_sections_unfolded = [ "Z Index" ]

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="3"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
_sections_unfolded = [ "Scroll" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

position = Vector2( 0, -6537.86 )
motion_scale = Vector2( 1, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 1280 )
_sections_unfolded = [ "Motion", "Transform", "Z Index" ]

[node name="1280＊720_BK04" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]

position = Vector2( 360, 620 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Vikings" type="Node2D" parent="." index="4"]

editor/display_folded = true
z_index = -1
_sections_unfolded = [ "Z Index" ]

[node name="LeftViking" type="AnimatedSprite" parent="Vikings" index="0"]

position = Vector2( -128, 777.862 )
frames = SubResource( 9 )
animation = "default"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="voice" type="AudioStreamPlayer2D" parent="Vikings/LeftViking" index="0"]

stream = ExtResource( 15 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="song" type="AudioStreamPlayer2D" parent="Vikings/LeftViking" index="1"]

stream = ExtResource( 16 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Vikings/LeftViking" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/30 = SubResource( 10 )
anims/40 = SubResource( 11 )
anims/setup = SubResource( 12 )
blend_times = [  ]

[node name="RightViking" type="AnimatedSprite" parent="Vikings" index="1"]

position = Vector2( 850, 777.862 )
frames = SubResource( 13 )
animation = "default"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="voice" type="AudioStreamPlayer2D" parent="Vikings/RightViking" index="0"]

stream = ExtResource( 19 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="song" type="AudioStreamPlayer2D" parent="Vikings/RightViking" index="1"]

stream = ExtResource( 20 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Vikings/RightViking" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/30 = SubResource( 14 )
anims/35 = SubResource( 15 )
anims/setup = SubResource( 16 )
blend_times = [  ]

[node name="ToppingSpawner" parent="." index="5" instance=ExtResource( 21 )]

visible = false
position = Vector2( 335.707, -1031.69 )
spam_ratio = 6

[node name="Remover" type="Area2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 370, 1070 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Remover" index="0"]

position = Vector2( -9.52258, 50.3341 )
shape = SubResource( 17 )

[node name="Camera2D" type="Camera2D" parent="." index="7"]

pause_mode = 2
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 22 )
_sections_unfolded = [ "Pause" ]

[node name="Shalap" type="AudioStreamPlayer" parent="." index="8"]

pause_mode = 2
stream = ExtResource( 23 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="Bgm" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 24 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="value_changed" from="Gui/debug_dish_value" to="." method="_on_debug_dish_value_value_changed"]

[connection signal="value_changed" from="Gui/debug_meter_down_time_value" to="." method="_on_debug_dish_value2_value_changed"]

[connection signal="value_changed" from="Gui/debug_meter_down_value" to="." method="_on_debug_meter_down_value_value_changed"]

[connection signal="value_changed" from="Gui/debug_meter_up_value" to="." method="_on_debug_meter_up_value_value_changed"]

[connection signal="value_changed" from="Gui/debug_spam_ratio_value" to="." method="_on_debug_spam_ratio_value_value_changed"]

[connection signal="pressed" from="Gui/Button" to="." method="_on_Button_pressed"]

[connection signal="topping_spawned" from="ToppingSpawner" to="." method="_on_ToppingSpawner_topping_spawned"]

[connection signal="area_entered" from="Remover" to="." method="_on_Remover_area_entered"]

[connection signal="goto_result" from="Camera2D" to="." method="_on_Camera2D_goto_result"]


